--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "revstrat/silverstripe-agegate",
+    "name": "moritz-sauer-13/silverstripe-agegate",
     "description": "Adds age-gate for verifying visitor's eligibility to view restricted content",
     "keywords": ["age", "agegate", "gate", "silverstripe"],
     "type": "silverstripe-vendormodule",
@@ -10,9 +10,10 @@
         "email": "rob@revolutionstrategy.com"
     }],
     "require": {
-        "silverstripe/framework": ">=4.0",
-        "geoip2/geoip2": "~2.0",
-        "jaybizzle/crawler-detect" :"1.*"
+        "silverstripe/framework": "^5",
+        "geoip2/geoip2": "^3",
+        "jaybizzle/crawler-detect" :"1.*",
+        "silverstripe/siteconfig": "^5.4"
     },
     "extra": {
         "installer-name": "agegate",
@@ -27,5 +28,11 @@
         }
     },
     "minimum-stability": "dev",
-    "prefer-stable": true
+    "prefer-stable": true,
+    "config": {
+        "allow-plugins": {
+            "composer/installers": true,
+            "silverstripe/vendor-plugin": true
+        }
+    }
 }
